Fix slider overflow

--- a/src/components/Header/Carousel/Carousel.css
+++ b/src/components/Header/Carousel/Carousel.css
@@ -1,3 +1,7 @@
+.slider {
+  overflow-x: hidden;
+}
+
 .slider img {
   width: 100%;
 }
