--- a/src/components/MenuTabs/MenuTabs.css
+++ b/src/components/MenuTabs/MenuTabs.css
@@ -54,8 +54,9 @@
     display: flex;
     column-gap: .5rem;
     overflow-x: scroll;
-    max-width: 100%;
+    max-width: 100vw;
 }
+
 
 .menu-tab--content {
     padding: 2rem 3rem;
